# prueba-lite

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/companies/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/companies/migrations/: 0001_initial.py
backend/core/: serializers.py  settings.py  urls.py
backend/products/: admin.py  models.py  serializers.py  tests.py  views.py
backend/products/migrations/: 0001_initial.py
dominio/: pyproject.toml
dominio/lite_dominio/: models.py
dominio/lite_dominio/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: authService.ts  client.ts  empresaService.ts  productoService.ts
frontend/src/components/atoms/: Button.tsx  Input.tsx  Label.tsx  Select.tsx  TextArea.tsx
frontend/src/components/molecules/: FormField.tsx  FormSelect.tsx
frontend/src/components/organisms/: EmpresaForm.tsx  ProductoForm.tsx
frontend/src/pages/: EmpresaPage.tsx  InventarioPage.tsx  LoginPage.tsx  ProductoPage.tsx
frontend/src/types/: index.ts
