[project]
name = "lite-dominio"
version = "0.1.0"
description = "capa de dominio de prueba con lite thinking"
authors = [
    {name = "Daniel Gonzalez",email = "dgonzalezca@unal.edu.co"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
